MainWidget: prevent line wrapping between flags

--- a/files/css/1.css
+++ b/files/css/1.css
@@ -136,6 +136,10 @@ h2 {
     margin-left: -15px;
 }
 
+.thechess-flags {
+    white-space: nowrap;
+}
+
 .thechess-error {
     color: red;
 }
